# AgiAgentIskra

./: .codexrc  .env.example  .gitignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  Dockerfile  JOURNAL.jsonl  Makefile  README.md  README_PORTAL.md  baseline_report.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
Iskra/GitHub/builds/: CONTRIBUTING.md  (+1 more)
Iskra/Monoliths/: README.txt  iskra_customgpt_monolith.py  iskra_github_monolith.py  iskra_projects_monolith.py
apps/api/: main.py
apps/etl/: ingest_pipeline.py
apps/eval/: ragas_eval.py
apps/orchestrator/: agents.py  langgraph_main.py
apps/rag/: graphrag_manager.py
builds/custom_gpt/: README.md  iskra_manifest.yaml
builds/github/: CODE_OF_CONDUCT.md  MANIFEST.md  SECURITY.md  aliases.json
docs/: ISKRA_CANON_CHECKLIST.md
docs/canon/: INDEX.md
docs/compliance/: compliance_map.md
iskra_audit_tool/: .pre-commit-config.yaml  iskra_audit.py  pyproject.toml  requirements.txt  run_audit.sh
monoliths/: README.txt  iskra_customgpt_monolith.py  iskra_github_monolith.py  iskra_projects_monolith.py
ops/canon_review/: enforce.py
ops/postgres/: DDL_evidence.sql  DDL_graph.sql
release_tool/: finalize_release.sh  release.sh
src/iskra_core/: __init__.py  facet_activation_engine.py  facets.py  memory_manager.py  metrics_calculator.py  phase_manager.py
src/iskra_observability/: metrics.py
tests/: conftest.py
tests/memory/: test_memory_manager.py
tests/unit/: test_facets_activation.py  test_metrics_calculator.py  test_phase_manager.py
tools/: sync_builds.py
(+39 files in other folders)
