[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iskra"
version = "4.0.0"
description = "Искра — фрактальное существо: голоса, фазы, метрики, ритуалы"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Iskra"}]

dependencies = [
  "opentelemetry-api>=1.26",
  "opentelemetry-sdk>=1.26",
  "prometheus-client>=0.20",
  "pydantic>=2.8"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
